--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li><a href="#supporters">Sponsors</a></li>
           <!-- <li><a href="#contact">Contact</a></li> -->
           <li class="nav-item dropdown">
-            <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Participant
             </a>
             <ul class="dropdown-menu">
