--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="speaker">
               <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid" style="width: 100%; height: 370px;">
               <div class="details">
-                <h3><a href="speaker-details.html">Prof. K.K. Shukla</a></h3>
+                <h3><a href="#">Prof. K.K. Shukla</a></h3>
                 <p>Patron <br> Director NIT Jamshedpur</p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -217,7 +217,7 @@
             <div class="speaker">
               <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid" style="width: 100%; height: 370px;">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Ranjit Prasad</a></h3>
+                <h3><a href="#">Dr. Ranjit Prasad</a></h3>
                 <p>Chairman <br> HOD MME, NIT Jamshedpur</p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -232,7 +232,7 @@
             <div class="speaker">
               <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid" style="width: 100%; height: 370px;">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Rina Sahu</a></h3>
+                <h3><a href="#">Dr. Rina Sahu</a></h3>
                 <p> Convener<br> MME, NIT JAMSHEDPUR</p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -247,7 +247,7 @@
             <div class="speaker">
               <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid" style="width: 100%; height: 370px;">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Ram Krishna</a></h3>
+                <h3><a href="#">Dr. Ram Krishna</a></h3>
                 <p>Organizing Secretary <br>MME, NIT Jamshedpur</p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -771,7 +771,7 @@
 
       <div class="container">
         <div class="section-header">
-          <h2>Sponsors</h2>
+          <h2>Associations</h2>
         </div>
 
         <div class="row no-gutters supporters-wrap clearfix">
