--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <h1 class="mb-4 pb-0">AMPT 3<sup><span
             style="text-transform: lowercase; color: aliceblue;">rd</span></sup><br><span>International</span>
         Conference</h1>
-      <p class="mb-4 pb-0">14-15 July, 2023 <br>National Institute Of Technology Jamshedpur</p>
+      <p class="mb-4 pb-0">13-14 July, 2023 <br>National Institute Of Technology Jamshedpur</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
@@ -1029,7 +1029,7 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#about">About us</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Submissions</a></li>
               <!-- <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li> -->
