--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
+      <a href="AMPT Format Template.zip" class="about-btn ">Download Format for Preparation of Full Manuscript</a>
     </div>
   </section>
 
@@ -117,7 +118,7 @@
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>Monday to Wednesday<br>13th-14th July</p>
+            <p>Thursday to Friday<br>13th-14th July</p>
           </div>
         </div>
       </div>
@@ -1053,8 +1054,19 @@
               National Institute Of Technology Jamshedpur<br>
               Aditypur, Jamshedpur-831014<br>
               India <br>
-              <strong>Phone:</strong> +91-9709509588, +91-9806312219<br>
-              <strong>Email:</strong> ampt@nitjsr.ac.in <br>
+              
+              <li style="list-style: none;"><strong>General Enquiry</strong><br>
+              <strong>Phone:</strong> +91-8085182219
+              <br>Mr. Ujjwal Pathak <br>
+              Technical Staff, Dept. Of MME
+              </li>
+              <br>
+              <li style="list-style: none;"><strong>Special Enquiry</strong><br>
+              <strong>Phone:</strong> +91-9771420866
+              <br>Dr. Rina Sahu <br>
+              Dept. Of MME <br>
+              <strong>Email:</strong> ampt@nitjsr.ac.in
+              </li>
             </p>
 
             <!-- <div class="social-links">
