--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
+      <a href="Brochure AMPT 2023 4th Circular dated 22 April 2023 (1).pdf" class="about-btn ">Download Brochure</a>
       <a href="AMPT Format Template.zip" class="about-btn ">Download Format for Preparation of Full Manuscript</a>
     </div>
   </section>
