--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
       <a href="Brochure AMPT 2023 4th Circular dated 22 April 2023 (1).pdf" class="about-btn ">Download Brochure</a>
-      <a href="AMPT Format Template.zip" class="about-btn ">Download Format for Preparation of Full Manuscript</a>
+      <a href="AMPT Format Template.zip" class="about-btn ">Format for Preparation of Full Manuscript</a>
     </div>
   </section>
 
