--- a/index.html
+++ b/index.html
@@ -138,45 +138,45 @@
 
             <div class="row schedule-item">
               <div class="col-md-2">
-                <date>20/05/2023</date>
+                <date>20/06/2023</date>
               </div>
               <div class="col-md-10">
 
 
-                <p>Last Date for Abstract Submission</p>
+               <strong> <p>Last Date for Abstract Submission</p></strong>
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-2">
-                <date>25/05/2023</date>
+                <date>23/05/2023</date>
               </div>
               <div class="col-md-10">
 
 
-                <p>Intimation of Selected Abstracts </p>
+               <strong> <p>Intimation of Selected Abstracts </p></strong>
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-2">
-                <date>15/06/2023</date>
+                <date>30/06/2023</date>
               </div>
               <div class="col-md-10">
 
 
-                <p>Last Date for Paper Submission </p>
+               <strong> <p>Last Date for Paper Submission </p></strong>             
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-2">
-                <date>25/06/2023</date>
+                <date>30/06/2023</date>
               </div>
               <div class="col-md-10">
 
 
-                <p>Last Date For Registration</p>
+                <strong><p>Last Date For Registration</p></strong>
               </div>
             </div>
 
