--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="speaker">
               <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid" style="width: 100%; height: 370px;">
               <div class="details">
-                <h3><a href="#">Prof. K.K. Shukla</a></h3>
+                <h3><a href="#">Prof. Gautam Sutradhar</a></h3>
                 <p>Patron <br> Director NIT Jamshedpur</p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
