--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#dates">Key Dates</a></li>
-          <li><a href="#speakers">Organizing Comittee</a></li>
-
+          <li><a href="#comittee">Organizing Comittee</a></li>
+          <li><a href="#speakers">Speakers</a></li>
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
 
@@ -189,10 +189,46 @@
       <hr>
     </section>
 
+    <section id="speakers" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2>Keynote Speakers</h2>
+          <p>Here are our Keynote Speakers</p>
+        </div>
+
+        <br>
+
+        <div class="row schedule-item">
+          <div class="col-md-2">
+            <date></date>
+          </div>
+          <div class="col-md-10">
+            
+
+            <strong><h4 style="margin-bottom: 5px; font-weight: bold;">Professor Nageswara Rao Posinasetti</h4></strong>
+            <p>University of Northern Iowa, USA</p>
+          </div>
+        </div>
+
+        <div class="row schedule-item">
+          <div class="col-md-2">
+            <date></date>
+          </div>
+          <div class="col-md-10">
+            
+
+            <strong><h4 style="margin-bottom: 5px; font-weight: bold;">Mr. Madhusudam Roy</h4></strong>
+            <p>Velosi International, TCB, Co.W.L.L. Dubai</p>
+          </div>
+        </div>
+
+        </div>
+    </section>
+
     <!--==========================
       Speakers Section
     ============================-->
-    <section id="speakers" class="wow fadeInUp">
+    <section id="speaker" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>Oragnising Committee</h2>
