--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#dates">Key Dates</a></li>
-          <li><a href="#comittee">Organizing Comittee</a></li>
-          <li><a href="#speakers">Speakers</a></li>
+          <li><a href="#speakers">Organizing Comittee</a></li>
+          <li><a href="#keynote">Speakers</a></li>
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
 
@@ -189,7 +189,7 @@
       <hr>
     </section>
 
-    <section id="speakers" class="wow fadeInUp">
+    <section id="keynote" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>Keynote Speakers</h2>
@@ -228,7 +228,7 @@
     <!--==========================
       Speakers Section
     ============================-->
-    <section id="speaker" class="wow fadeInUp">
+    <section id="speakers" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>Oragnising Committee</h2>
