--- a/index.html
+++ b/index.html
@@ -234,6 +234,26 @@
           </div>
         </div>
 
+        <div class="row schedule-item">
+          <div class="col-md-2">
+            <date></date>
+          </div>
+          <div class="col-md-10">
+
+
+            <strong>
+              <h4 style="margin-bottom: 5px; font-weight: bold;">Prof. (Dr.) Dipak Mazumdar</h4>
+            </strong>
+            
+            <p>Ministry of Steel Chair, Professor
+              INAE Distinguished Industry, Professor
+              Materials Science and Engineering
+              Indian Institute of Technology
+              Kanpur, India</p>
+          </div>
+        </div>
+
+
       </div>
     </section>
 
@@ -518,7 +538,7 @@
         </div>
 
 <!-- national -->
-        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="national" >
+        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="national" style="display: none;">
           <div class="row schedule-item">
             <div class="col-md-2">
               <date></date>
@@ -632,7 +652,7 @@
               <strong>
                 <h5 style="margin-bottom: 5px; font-weight: bold;">Dr. Anup Kumar</h5>
               </strong>
-              <p>Chief R&D, Tata Steel</p>
+              <p>Chief, Scientific Services, Tata Steel</p>
             </div>
           </div>
 
