--- a/index.html
+++ b/index.html
@@ -1411,44 +1411,65 @@
     <!--==========================
       Contact Section
     ============================-->
-    <!-- <section id="contact" class="section-bg wow fadeInUp">
+    <section id="contact" class="section-bg wow fadeInUp">
 
       <div class="container">
 
         <div class="section-header">
-          <h2>Contact Us</h2>
-          <p>Nihil officia ut sint molestiae tenetur.</p>
+          <h2>Be Our Sponsor</h2>
+          <p></p>
         </div>
 
-        <div class="row contact-info">
+        <div class="row contact-info" style="justify-content: center;">
 
-          <div class="col-md-4">
-            <div class="contact-address">
+          <div class="col-md-4" >
+            <div class="contact-address" style="border: 4px solid rgb(130, 192, 243); border-radius: 10px;"> 
               <i class="ion-ios-location-outline"></i>
-              <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <h3>TITLE (DIAMOND) SPONSOR</h3>
+              <address>Rs. 5,00,000</address>
+              <address>Delegate Passes - 5</address>
             </div>
           </div>
 
-          <div class="col-md-4">
-            <div class="contact-phone">
+          <div class="col-md-4" >
+            <div class="contact-phone" style="border: 4px solid rgb(178, 180, 181); border-radius: 10px;">
               <i class="ion-ios-telephone-outline"></i>
-              <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <h3>Platinum Sponsor</h3>
+              <address>Rs. 2,50,000</address>
+              <address>Delegate Passes - 4</address>
+            </div>
+          </div>
+
+          <div class="col-md-4" >
+            <div class="contact-email" style="border: 4px solid gold; border-radius: 10px;">
+              <i class="ion-ios-email-outline"></i>
+              <h3>Gold Sponsor</h3>
+              <address>Rs. 1,50,000</address>
+              <address>Delegate Passes - 3</address>
             </div>
           </div>
 
           <div class="col-md-4">
-            <div class="contact-email">
+            <div class="contact-email" style="border: 4px solid silver; border-radius: 10px;">
               <i class="ion-ios-email-outline"></i>
-              <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <h3>Silver Sponsor</h3>
+              <address>Rs. 50,000</address>
+              <address>Delegate Passes - 2</address>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="contact-email" style="border: 4px solid rgb(236, 161, 91); border-radius: 10px;">
+              <i class="ion-ios-email-outline"></i>
+              <h3>Bronze Sponsor</h3>
+              <address>Rs. 25,000</address>
+              <address>Delegate Passes - 1</address>
             </div>
           </div>
 
         </div>
 
-        <div class="form">
+        <!-- <div class="form">
           <div id="sendmessage">Your message has been sent. Thank you!</div>
           <div id="errormessage"></div>
           <form action="" method="post" role="form" class="contactForm">
@@ -1472,10 +1493,10 @@
             </div>
             <div class="text-center"><button type="submit">Send Message</button></div>
           </form>
-        </div>
+        </div> -->
 
       </div>
-    </section>#contact -->
+    </section>#contact
 
   </main>
 
@@ -1565,7 +1586,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-        Designed by Sidharth Sharma
+        Designed by Sidharth Sharma - shishu.jsrsidh@gmail.com
       </div>
     </div>
   </footer><!-- #footer -->
