--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
 
 
           <li><a class=" nav-item" href="https://forms.gle/qFZYY4QHmYRfJgdj9">Register</a></li>
-          <li><a class=" nav-item"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSf0krFo982M8pHH7pxeCjDW1vmLXjBCIr3wZzBf9shpQktoeQ/viewform">Submit
-              Abstract</a></li>
+          <li><a class=" nav-item" href="#pay">Payments</a></li>
 
 
 
@@ -1496,7 +1494,24 @@
         </div> -->
 
       </div>
-    </section>#contact
+    </section>
+
+
+    <section id="pay" class="section-with-bg wow fadeInUp">
+
+      <div class="container">
+
+        <div class="section-header">
+          <h2>Payment Option</h2>
+          
+        </div>
+      </div>
+      <div class="container">
+      <p><strong>Bank Name : </strong>State Bank of India</p>
+      <p><strong>Account No. : </strong>42002168493</p>
+      <p><strong>IFSC Code : </strong>SBIN0001882</p>
+    </div>
+    </section>
 
   </main>
 
