--- a/index.html
+++ b/index.html
@@ -134,6 +134,20 @@
 
 
 
+
+            <div class="row schedule-item">
+              <div class="col-md-2">
+                <!-- <date>23/06/2023</date> -->
+              </div>
+              <div class="col-md-10">
+
+
+                <strong>
+                  <p style="color: red; font-weight: bold;">Last Date for Registration has been extendedd upto 06/07/2023 </p>
+                </strong>
+              </div>
+            </div>
+
             <div class="row schedule-item">
               <div class="col-md-2">
                 <date>20/06/2023</date>
